fix buttons overlay. Add z-index: 2

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,7 @@ body {
     inset: 0;
     opacity: 0;
     transition: .3s opacity;
+    z-index: 2;
 }
 
 .player:hover .player-overlay {
